# fossa-cli

./: .coderabbit.yaml  .dockerignore  .editorconfig  .fossa.yaml  .fossa.yml  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .hlint.yaml  .mailmap  .markdown-link-check.json  .stan.toml  CHANGELOG  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  Changelog.md~  Dockerfile  Execute-LatestFossa.ps1  Gopkg.toml  HACKING.md  ISSUE_TEMPLATE.md  LICENSE  Makefile  NOTICE  README.md  STYLE-GUIDE.md  TODO  TODO.md  attribution.md  best_practices.md  cabal.project  cabal.project.ci  cabal.project.ci.linux  cabal.project.ci.macos  cabal.project.ci.windows  (+26 more)
.builders/: builder.go
.builders/golang/: golang.go
.cargo/: config.toml
.circleci/: config.yml
.config/: file.go  init.go
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  code-related.md  feature_request.md
.github/scripts/: install-nix.sh
.github/workflows/: badges.yml  bench.yml  build-all.yml  build.yml  dependency-scan.yml  generator-generic-ossf-slsa3-publish.yml  install-script-test.yml  integration-tests.yml  integrations-test.yml  issue.yml  lint.yml  nix-test.yml  release.yml  report.yml  stale.yml  static-analysis.yml
.module/: locator_test.go
analyzers/: analyzer.go  analyzer_test.go  discover.go
analyzers/ant/: ant.go  ant_test.go  hashes.go
analyzers/bazel/: bazel.go  bazel_test.go
analyzers/bower/: bower.go  tool.go
analyzers/buck/: buck.go  buck_test.go
analyzers/carthage/: carthage.go
analyzers/clojure/: clojure.go  clojure_test.go
analyzers/cocoapods/: builder.go  cocoapods.go
analyzers/debian/: debian.go
analyzers/golang/: analyze.go  analyze_test.go  cache.go  discover.go  discover_test.go  find.go  golang.go  golang_test.go  integration_test.go  lockfile.go  manifest.go  project.go  project_test.go  resolve.go  revision.go  revision_test.go  util.go  util_test.go  vcs.go
analyzers/gradle/: builder.go  gradle.go  gradle2.go  gradle_test.go  (+1 more)
api/: api.go  normalize.go
app/: Main.hs
bench/: Main.hs
builders/: ant.go  archive.go  bower.go  builder.go  cocoapods.go  common.go  composer.go  golang.go  gradle.go  maven.go  nodejs.go  nuget.go  pip.go  ruby.go  sbt.go  sbt_test.go
buildtools/: errors.go
ci/: Dockerfile
cmd/: fossa.go
common/: api.go  exec.go  file.go  logging.go  services.go
config/: config.go  config_test.go  file.go  file_test.go  flags.go  init.go  keys.go  keys_test.go  moduletype.go  try.go  types.go
devdocs/: index.md  parsing-best-practices.md  replay-logging.md
docker/: Dockerfile  Dockerfile.lint
docs/: README.md  config-file.md  differences-from-v1.md  faq.md  glossary.md  how-it-works.md  install-v1.md  maven.md  new-user-guide.md  strategies.md  telemetry.md  user-guide.md  userguide.md
empty/: ls
env/: README.md  repository.go
errors/: errors.go  messages.go
errutil/: error.go  errutil.go
exec/: run.go  run_test.go  shell.go  which.go
experimental-scripts/: bower.py
extlib/: README.md
extlib/berkeleydb/: Cargo.toml  README.md
extlib/berkeleydb/benches/: parse.rs
extlib/berkeleydb/src/: ffi.rs  lib.rs  main.rs  metadata.rs  parse.rs  read.rs
extlib/berkeleydb/src/metadata/: generic.rs  hash.rs  page.rs  shared.rs
extlib/berkeleydb/src/read/: entry.rs  header.rs  index.rs  value.rs
extlib/berkeleydb/testdata/sles12sp4/: Packages
extlib/berkeleydb/tests/it/: main.rs
extlib/cryptoscan/: Cargo.toml
extlib/cryptoscan/src/: crypto_algorithm.rs  cyclonedx.rs  fips.rs  main.rs  patterns.rs  scanner.rs
extlib/cryptoscan/tests/: integration_test.rs
extlib/millhone/: Cargo.toml  README.md
extlib/millhone/docs/subcommands/: analyze.md  commit.md  ingest.md  ping.md
extlib/millhone/src/: api.rs  cmd.rs  ext.rs  extract.rs  lib.rs  main.rs  url.rs
extlib/millhone/src/api/: types.rs  v1.rs
extlib/millhone/src/api/types/: error.rs
extlib/millhone/src/api/v1/: ingest.rs  lookup.rs  ping.rs
extlib/millhone/src/cmd/: analyze.rs  analyze_container.rs  analyze_jars.rs  commit.rs  ingest.rs  ping.rs  types.rs
extlib/millhone/src/cmd/types/: ingest.rs
extlib/millhone/src/ext/: api.rs  literal.rs
extlib/reachability/: Cargo.toml  README.md
extlib/reachability/src/: lib.rs  main.rs
files/: files.go  files_test.go  find.go  unmarshal.go
fixtures/: .gitignore  test.sh
graph/: flatten.go  graph.go  readtree.go
integration-test/: SpecHook.hs  test.hs
licenseApp/: Main.hs
log/: README.md  levels.go  log.go  spinner.go
module/: analyzer2.go  builder.go  dependency.go  hashes.go  locator.go  module.go  module_test.go  types.go
monad/: monad.go
pkg/: package.go  types.go  types_test.go
project/: options.go  project.go
report/: README.md
scan/: cmd.go
scripts/: is_test_only_go_dep.sh  jarpaths.gradle  jsondeps.gradle
services/: api.go  exec.go  file.go  logging.go  services.go
src/: App.hs  AppLicense.hs  Config.hs  DepTypes.hs  DiagExamples.hs  Diagnostics.hs  Discovery.hs  Graph.hs  Graphing.hs  LabeledGraphing.hs  MyLib.hs  OptionExtensions.hs  Prologue.hs  Strategy.hs  Style.hs  Tryout.hs  Types.hs  Utils.hs
test/: AdjacencyMapSpec.hs  BundlerSpec.hs  GraphUtil.hs  GraphingSpec.hs  IntSpec.hs  ResultUtil.hs  SpecHook.hs
test/Pdm/testdata/basic/: pyproject.toml
test/Python/Poetry/testdata/no-category/: pyproject.test.toml  pyproject.toml
test/Python/PyProjectGeneric/testdata/pdm/: pyproject.toml
test/Python/PyProjectGeneric/testdata/pep621/: pyproject.toml
test/Python/PyProjectGeneric/testdata/poetry/: pyproject.toml
testing/: testing.go
tmpdata/: Signin.podspec
tools/diagnose/: Cargo.toml  README.md
tools/diagnose/src/: cmd.rs  main.rs
tools/diagnose/src/cmd/: debug_output_format.rs  walk.rs
tools/fs-diagnose/: Cargo.toml  README.md
tools/fs-diagnose/src/: main.rs
tools/fs-diagnose/src/cmd/: walk.rs
vcs/: find.go  git.go  mercurial.go  mercurial_test.go  none.go  none_test.go  svn.go  svn_test.go  types.go  vcs.go  vcs_test.go
(+1787 files in other folders)
