[workspace]
members = [
  "extlib/berkeleydb",
  "extlib/millhone",
  "extlib/reachability",
  "tools/diagnose",
]

# This field is documented as accepting globs but apparently only prefix matches:
# https://github.com/rust-lang/cargo/issues/11405
exclude = [
  "integration-test/artifacts/rust/bat/",
  "integration-test/artifacts/rust/fd/"
]

resolver = "2"

[profile.release]
lto = "fat"
strip = true
