[workspace]
members = [
  "extlib/berkeleydb",
  "extlib/cryptoscan",
  "extlib/millhone",
  "tools/diagnose",
  "tools/rendergraph",
]

# This field is documented as accepting globs but apparently only prefix matches:
# https://github.com/rust-lang/cargo/issues/11405
exclude = [
  "integration-test/artifacts/rust/bat/",
  "integration-test/artifacts/rust/fd/"
]

resolver = "2"

[profile.release]
lto = "fat"
strip = true

# There is additional configuration in .cargo/config.toml.
# It is used for building on aarch64-unknown-linux-musl.
# More context on the split here: https://github.com/rust-lang/cargo/issues/12738
