cabal-version:      2.4
name:               hscli
version:            0.1.0.0
build-type:         Simple
extra-source-files: CHANGELOG.md

common lang
  build-depends:      base ^>=4.12
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MonadFailDesugaring
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

common deps
  build-depends:
    , aeson                        ^>=1.4.5
    , algebraic-graphs             ^>=0.4
    , async                        ^>=2.2.2
    , attoparsec                   ^>=0.13.2.3
    , bytestring                   ^>=0.10.8
    , containers                   ^>=0.6.0
    , file-embed                   ^>=0.0.11
    , filemanip                    ^>=0.3.6
    , filepath                     ^>=1.4.2.1
    , git-config                   ^>=0.1.2
    , megaparsec                   ^>=7.0.5
    , modern-uri                   ^>=0.3.1
    , mtl                          ^>=2.2.2
    , optics                       ^>=0.2
    , optparse-applicative         ^>=0.15.1
    , path                         ^>=0.6.1
    , path-io                      ^>=1.6.0
    , polysemy                     ^>=1.2.1
    , prettyprinter                ^>=1.5.1
    , prettyprinter-ansi-terminal  ^>=1.1.1
    , stm                          ^>=2.5.0
    , stm-chans                    ^>=3.0.0
    , text                         ^>=1.2.3
    , time                         ^>=1.8.0.2
    , tomland                      ^>=1.2.0
    , typed-process                ^>=0.2.6
    , unordered-containers         ^>=0.2.10
    , vector                       ^>=0.12.0.3
    , yaml                         ^>=0.11.1
    , yarn-lock                    ^>=0.6.1

library
  import:          lang
  import:          deps

  -- cabal-fmt: expand src
  exposed-modules:
    App
    App.Scan
    App.Scan.Graph
    App.Scan.GraphBuilder
    App.Scan.GraphMangler
    App.Scan.Project
    App.Scan.ProjectInference
    Control.Parallel
    DepTypes
    Diagnostics
    Discovery
    Discovery.Config
    Discovery.Walk
    Effect.Error
    Effect.Exec
    Effect.Grapher
    Effect.LabeledGrapher
    Effect.Logger
    Effect.ReadFS
    Graphing
    LabeledGraphing
    Prologue
    Strategy.Go.GoList
    Strategy.Go.Gomod
    Strategy.Go.GopkgLock
    Strategy.Go.GopkgToml
    Strategy.Go.GlideLock
    Strategy.Go.Transitive
    Strategy.Go.Types
    Strategy.Gradle
    Strategy.Node.YarnLock
    Strategy.NpmList
    Strategy.Python.PipList
    Strategy.Python.Pipenv
    Strategy.Python.ReqTxt
    Strategy.Python.SetupPy
    Strategy.Python.Util
    Strategy.Ruby.BundleShow
    Types

  hs-source-dirs:  src

executable hscli
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  hscli
  ghc-options:
    -flate-specialise -fspecialize-aggressively -O -threaded
    -with-rtsopts=-N

test-suite test
  import:             lang
  import:             deps
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            test.hs

  -- cabal-fmt: expand test
  other-modules:
    Go.GoListTest
    Go.GomodTest
    Go.GopkgLockTest
    Go.GopkgTomlTest
    Go.GlideLockTest
    Gradle.GradleTest
    GraphUtil
    Python.PipListTest
    Python.PipenvTest
    Python.ReqTxtTest
    Python.RequirementsTest
    Python.SetupPyTest
    Ruby.BundleShowTest

  build-tool-depends: tasty-discover:tasty-discover ^>=4.2.1
  build-depends:
    , hscli
    , hspec-megaparsec  ^>=2.0.1
    , tasty             ^>=1.2.3
    , tasty-hspec       ^>=1.1.5.1
