cabal-version:      3.0
name:               spectrometer
version:            0.1.0.0
license:            MPL-2.0
build-type:         Simple
extra-source-files:
  scripts/*.gradle
  scripts/*.jar

common lang
  build-depends:      base ^>=4.15
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

-- TODO: base16-bytestring isn't a direct dep, but we need to add version bounds because cpio-conduit fails to compile with a newer version. Remove the dependency on base16-bytestring once we fix or bump cpio-conduit
-- TODO: Switch `semver` back to `versions` once https://github.com/fosskers/versions/issues/47 is fixed? This package maintainer seems much more responsive. Contrast https://github.com/brendanhay/semver/issues/12.
common deps
  build-depends:
    , aeson                        ^>=1.5.2.0
    , aeson-pretty                 ^>=0.8.9
    , algebraic-graphs             ^>=0.5
    , ansi-terminal                ^>=0.11
    , async                        ^>=2.2.2
    , attoparsec                   ^>=0.14.1
    , base16-bytestring            ^>=1.0.1.0
    , bytestring                   ^>=0.10.8
    , bzlib                        ^>=0.5.0.0
    , cgroup-rts-threads           ^>=0.2.0.0
    , codec-rpm                    ^>=0.2.2
    , concurrent-output            ^>=1.10.12
    , conduit                      ^>=1.3.2
    , conduit-extra                ^>=1.3.5
    , conduit-zstd                 ^>=0.0.2.0
    , containers                   ^>=0.6.0
    , cpio-conduit                 ^>=0.7.0
    , cryptonite                   ^>=0.29
    , deepseq                      >=1.4.5.0
    , directory                    ^>=1.3.6.1
    , exceptions                   ^>=0.10.4
    , file-embed                   ^>=0.0.11
    , filepath                     ^>=1.4.2.1
    , filepattern                  ^>=0.1.2
    , fused-effects                ^>=1.1.0.0
    , fused-effects-exceptions     ^>=1.1.0.0
    , git-config                   ^>=0.1.2
    , githash                      ^>=0.1.4.0
    , hashable                     >= 1.0.0.1
    , hashtables                   >=1.2
    , hedn                         ^>=0.3.0.1
    , http-client                  ^>=0.7.1
    , http-types                   ^>=0.12.3
    , lzma                         ^>=0.0.0.3
    , lzma-conduit                 ^>=1.2.1
    , megaparsec                   ^>=9.1.0
    , modern-uri                   ^>=0.3.4
    , mtl                          ^>=2.2.2
    , optparse-applicative         >=0.15     && <0.17
    , parser-combinators           ^>=1.3
    , path                         ^>=0.9.0
    , path-io                      ^>=1.6.0
    , pretty-simple                ^>=4.0
    , prettyprinter                >=1.6      && <1.8
    , prettyprinter-ansi-terminal  ^>=1.1.1
    , random                       ^>=1.2.0
    , raw-strings-qq               ^>=1.1
    , req                          ^>=3.9.1
    , retry                        ^>=0.9.0.0
    , semver                       ^>=0.4.0.1
    , split                        ^>=0.2.3.4
    , stm                          ^>=2.5.0
    , stm-chans                    ^>=3.0.0
    , tar                          ^>=0.5.1.1
    , template-haskell             ^>=2.17
    , text                         ^>=1.2.3
    , th-lift-instances            ^>=0.1.17
    , time                         >=1.9      && <1.11
    , timeit                       ^>=2.0
    , tomland                      ^>=1.3.3.0
    , transformers
    , typed-process                ^>=0.2.6
    , unix-compat                  ^>=0.5.4
    , unordered-containers         ^>=0.2.10
    , uuid                         ^>=1.3.15
    , vector                       ^>=0.12.0.3
    , versions                     ^>=5.0.0
    , word8                        ^>=0.1.3
    , xml                          ^>=1.3.14
    , yaml                         ^>=0.11.1
    , yarn-lock                    ^>=0.6.5
    , zip                          ^>=1.7.1
    , zlib                         ^>=0.6.2.1

  if !os(windows)
    build-depends: unix ^>=2.7.2.2

library
  import:          lang
  import:          deps

  -- cabal-fmt: expand src
  exposed-modules:
    Algebra.Graph.AdjacencyMap.Extra
    App.Docs
    App.Fossa.Analyze
    App.Fossa.Analyze.Debug
    App.Fossa.Analyze.Discover
    App.Fossa.Analyze.Filter
    App.Fossa.Analyze.Graph
    App.Fossa.Analyze.GraphBuilder
    App.Fossa.Analyze.GraphMangler
    App.Fossa.Analyze.Log4jReport
    App.Fossa.Analyze.Project
    App.Fossa.Analyze.Record
    App.Fossa.Analyze.ScanSummary
    App.Fossa.Analyze.Types
    App.Fossa.Analyze.Upload
    App.Fossa.API.BuildLink
    App.Fossa.API.BuildWait
    App.Fossa.ArchiveUploader
    App.Fossa.BinaryDeps
    App.Fossa.BinaryDeps.Jar
    App.Fossa.Config.Analyze
    App.Fossa.Config.Common
    App.Fossa.Config.ConfigFile
    App.Fossa.Config.Container
    App.Fossa.Config.Container.Analyze
    App.Fossa.Config.Container.Common
    App.Fossa.Config.Container.Dump
    App.Fossa.Config.Container.Parse
    App.Fossa.Config.Container.Test
    App.Fossa.Config.DumpBinaries
    App.Fossa.Config.EnvironmentVars
    App.Fossa.Config.LicenseScan
    App.Fossa.Config.LinkUserBinaries
    App.Fossa.Config.ListTargets
    App.Fossa.Config.Report
    App.Fossa.Config.Test
    App.Fossa.Container
    App.Fossa.Container.Analyze
    App.Fossa.Container.AnalyzeNative
    App.Fossa.Container.Scan
    App.Fossa.Container.Test
    App.Fossa.DumpBinaries
    App.Fossa.EmbeddedBinary
    App.Fossa.LicenseScan
    App.Fossa.LicenseScanner
    App.Fossa.ListTargets
    App.Fossa.Main
    App.Fossa.ManualDeps
    App.Fossa.Monorepo
    App.Fossa.ProjectInference
    App.Fossa.Report
    App.Fossa.Report.Attribution
    App.Fossa.RunThemis
    App.Fossa.Subcommand
    App.Fossa.Test
    App.Fossa.VendoredDependency
    App.Fossa.VPS.Scan.RunWiggins
    App.Fossa.VPS.Types
    App.Fossa.VSI.Analyze
    App.Fossa.VSI.DynLinked
    App.Fossa.VSI.DynLinked.Internal.Binary
    App.Fossa.VSI.DynLinked.Internal.Lookup
    App.Fossa.VSI.DynLinked.Internal.Lookup.DEB
    App.Fossa.VSI.DynLinked.Internal.Lookup.RPM
    App.Fossa.VSI.DynLinked.Internal.Resolve
    App.Fossa.VSI.DynLinked.Types
    App.Fossa.VSI.DynLinked.Util
    App.Fossa.VSI.Fingerprint
    App.Fossa.VSI.IAT.AssertRevisionBinaries
    App.Fossa.VSI.IAT.AssertUserDefinedBinaries
    App.Fossa.VSI.IAT.Resolve
    App.Fossa.VSI.IAT.Types
    App.Fossa.VSI.Types
    App.Fossa.VSIDeps
    App.OptionExtensions
    App.Pathfinder.Main
    App.Pathfinder.Scan
    App.Pathfinder.Types
    App.Support
    App.Types
    App.Util
    App.Version
    App.Version.TH
    Console.Sticky
    Container.Docker.Manifest
    Container.Errors
    Container.OsRelease
    Container.Tarball
    Container.Types
    Control.Carrier.AtomicCounter
    Control.Carrier.AtomicState
    Control.Carrier.Debug
    Control.Carrier.Diagnostics
    Control.Carrier.Finally
    Control.Carrier.FossaApiClient
    Control.Carrier.FossaApiClient.Internal.Core
    Control.Carrier.FossaApiClient.Internal.FossaAPIV1
    Control.Carrier.FossaApiClient.Internal.LicenseScanning
    Control.Carrier.FossaApiClient.Internal.ScotlandYard
    Control.Carrier.FossaApiClient.Internal.VSI
    Control.Carrier.Git
    Control.Carrier.Output.IO
    Control.Carrier.Simple
    Control.Carrier.Stack
    Control.Carrier.Stack.StickyLog
    Control.Carrier.StickyLogger
    Control.Carrier.TaskPool
    Control.Carrier.Telemetry
    Control.Carrier.Telemetry.Sink.Common
    Control.Carrier.Telemetry.Sink.Endpoint
    Control.Carrier.Telemetry.Sink.File
    Control.Carrier.Telemetry.Types
    Control.Carrier.Telemetry.Utils
    Control.Carrier.Threaded
    Control.Effect.AtomicCounter
    Control.Effect.AtomicState
    Control.Effect.ConsoleRegion
    Control.Effect.Debug
    Control.Effect.Diagnostics
    Control.Effect.Finally
    Control.Effect.FossaApiClient
    Control.Effect.Git
    Control.Effect.Output
    Control.Effect.Path
    Control.Effect.Record
    Control.Effect.Record.TH
    Control.Effect.Replay
    Control.Effect.Replay.TH
    Control.Effect.Stack
    Control.Effect.StickyLogger
    Control.Effect.TaskPool
    Control.Effect.Telemetry
    Control.Exception.Extra
    Control.Timeout
    Control.Timeout.Internal
    Data.Aeson.Extra
    Data.Conduit.Extra
    Data.FileEmbed.Extra
    Data.FileTree.IndexFileTree
    Data.Flag
    Data.Functor.Extra
    Data.Glob
    Data.List.Extra
    Data.Monoid.Extra
    Data.Set.NonEmpty
    Data.String.Conversion
    Data.Tagged
    Data.Text.Extra
    Data.Tracing.Instrument
    DepTypes
    Diag.Common
    Diag.Diagnostic
    Diag.Monad
    Diag.Result
    Discovery.Archive
    Discovery.Archive.RPM
    Discovery.Filters
    Discovery.Projects
    Discovery.Simple
    Discovery.Walk
    Effect.Exec
    Effect.Grapher
    Effect.Logger
    Effect.ReadFS
    Fossa.API.Types
    Graphing
    Graphing.Debug
    Graphing.Hydrate
    Network.HTTP.Req.Extra
    Parse.XML
    Path.Extra
    Srclib.Converter
    Srclib.Types
    Strategy.AlpineLinux.Apk
    Strategy.AlpineLinux.Parser
    Strategy.AlpineLinux.Types
    Strategy.Android.Util
    Strategy.ApkDatabase
    Strategy.Bundler
    Strategy.Cargo
    Strategy.Carthage
    Strategy.Cocoapods
    Strategy.Cocoapods.Errors
    Strategy.Cocoapods.Podfile
    Strategy.Cocoapods.PodfileLock
    Strategy.Composer
    Strategy.Conda
    Strategy.Conda.CondaList
    Strategy.Conda.EnvironmentYml
    Strategy.Dart.Errors
    Strategy.Dart.PubDeps
    Strategy.Dart.PubSpec
    Strategy.Dart.PubSpecLock
    Strategy.Elixir.MixTree
    Strategy.Erlang.ConfigParser
    Strategy.Erlang.Rebar3Tree
    Strategy.Fortran.FpmToml
    Strategy.Fpm
    Strategy.Glide
    Strategy.Go.GlideLock
    Strategy.Go.GoList
    Strategy.Go.Gomod
    Strategy.Go.GoModGraph
    Strategy.Go.GopkgLock
    Strategy.Go.GopkgToml
    Strategy.Go.Gostd
    Strategy.Go.Transitive
    Strategy.Go.Types
    Strategy.Godep
    Strategy.Gomodules
    Strategy.Googlesource.RepoManifest
    Strategy.Gradle
    Strategy.Gradle.Common
    Strategy.Gradle.Errors
    Strategy.Gradle.ResolutionApi
    Strategy.Haskell.Cabal
    Strategy.Haskell.Stack
    Strategy.Leiningen
    Strategy.Maven
    Strategy.Maven.DepTree
    Strategy.Maven.Plugin
    Strategy.Maven.PluginStrategy
    Strategy.Maven.PluginTree
    Strategy.Maven.Pom
    Strategy.Maven.Pom.Closure
    Strategy.Maven.Pom.PomFile
    Strategy.Maven.Pom.Resolver
    Strategy.Mix
    Strategy.Nim
    Strategy.Nim.NimbleLock
    Strategy.Node
    Strategy.Node.Errors
    Strategy.Node.Npm.PackageLock
    Strategy.Node.Npm.PackageLockV3
    Strategy.Node.PackageJson
    Strategy.Node.Pnpm.PnpmLock
    Strategy.Node.YarnV1.YarnLock
    Strategy.Node.YarnV2.Lockfile
    Strategy.Node.YarnV2.Resolvers
    Strategy.Node.YarnV2.YarnLock
    Strategy.NuGet.Nuspec
    Strategy.NuGet.PackageReference
    Strategy.NuGet.PackagesConfig
    Strategy.NuGet.Paket
    Strategy.NuGet.ProjectAssetsJson
    Strategy.NuGet.ProjectJson
    Strategy.Perl
    Strategy.Pub
    Strategy.Python.Errors
    Strategy.Python.Pipenv
    Strategy.Python.Poetry
    Strategy.Python.Poetry.Common
    Strategy.Python.Poetry.PoetryLock
    Strategy.Python.Poetry.PyProject
    Strategy.Python.ReqTxt
    Strategy.Python.SetupPy
    Strategy.Python.Setuptools
    Strategy.Python.Util
    Strategy.Rebar3
    Strategy.RPM
    Strategy.Ruby.BundleShow
    Strategy.Ruby.Errors
    Strategy.Ruby.GemfileLock
    Strategy.Ruby.Parse
    Strategy.Scala
    Strategy.Scala.Common
    Strategy.Scala.Errors
    Strategy.Scala.SbtDependencyTree
    Strategy.Swift.Errors
    Strategy.Swift.PackageResolved
    Strategy.Swift.PackageSwift
    Strategy.Swift.Xcode.Pbxproj
    Strategy.Swift.Xcode.PbxprojParser
    Strategy.SwiftPM
    System.Args
    Text.URI.Builder
    Type.Operator
    Types

  hs-source-dirs:  src

executable fossa
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: app/fossa
  build-depends:  spectrometer
  ghc-options:    -threaded

executable pathfinder
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: app/pathfinder
  build-depends:  spectrometer
  ghc-options:    -threaded

test-suite unit-tests
  import:             lang
  import:             deps
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            test.hs

  -- cabal-fmt: expand test
  other-modules:
    AdjacencyMapSpec
    AlpineLinux.ParserSpec
    Android.UtilSpec
    App.DocsSpec
    App.Fossa.Analyze.UploadSpec
    App.Fossa.AnalyzeSpec
    App.Fossa.API.BuildLinkSpec
    App.Fossa.API.BuildWaitSpec
    App.Fossa.ArchiveUploaderSpec
    App.Fossa.BinaryDeps.JarSpec
    App.Fossa.Config.AnalyzeSpec
    App.Fossa.Config.TestSpec
    App.Fossa.Config.Utils
    App.Fossa.Configuration.ConfigurationSpec
    App.Fossa.Configuration.TelemetryConfigSpec
    App.Fossa.LicenseScannerSpec
    App.Fossa.ManualDepsSpec
    App.Fossa.ProjectInferenceSpec
    App.Fossa.Report.AttributionSpec
    App.Fossa.Report.Log4jReportSpec
    App.Fossa.ReportSpec
    App.Fossa.VendoredDependencySpec
    App.Fossa.VSI.DynLinked.Internal.BinarySpec
    App.Fossa.VSI.DynLinked.Internal.Lookup.DEBSpec
    App.Fossa.VSI.DynLinked.Internal.Lookup.RPMSpec
    App.Fossa.VSI.DynLinked.Internal.ResolveSpec
    App.Fossa.VSI.DynLinked.UtilSpec
    App.Fossa.VSI.FingerprintSpec
    App.Fossa.VSI.IAT.ResolveSpec
    BundlerSpec
    Cargo.CargoTomlSpec
    Cargo.MetadataSpec
    Carthage.CarthageSpec
    Clojure.ClojureSpec
    Cocoapods.CocoapodsSpec
    Cocoapods.PodfileLockSpec
    Cocoapods.PodfileSpec
    Composer.ComposerJsonSpec
    Composer.ComposerLockSpec
    Conda.CondaListSpec
    Conda.EnvironmentYmlSpec
    Container.Docker.ManifestSpec
    Container.OsReleaseSpec
    Container.TarballSpec
    Control.Carrier.DiagnosticsSpec
    Control.Carrier.TelemetrySpec
    Control.TimeoutSpec
    Dart.PubDepsSpec
    Dart.PubSpecLockSpec
    Dart.PubSpecSpec
    Discovery.ArchiveSpec
    Discovery.FiltersSpec
    Discovery.WalkSpec
    Effect.ExecSpec
    Effect.LoggerSpec
    Elixir.MixTreeSpec
    Erlang.ConfigParserSpec
    Erlang.Rebar3TreeSpec
    Extra.ListSpec
    Extra.TextSpec
    Fortran.FpmTomlSpec
    Fossa.API.TypesSpec
    Go.GlideLockSpec
    Go.GoListSpec
    Go.GoModGraphSpec
    Go.GomodSpec
    Go.GopkgLockSpec
    Go.GopkgTomlSpec
    Go.GostdSpec
    Go.TransitiveSpec
    Googlesource.RepoManifestSpec
    Gradle.CommonSpec
    Gradle.ResolutionApiSpec
    Graphing.HydrateSpec
    GraphingSpec
    GraphUtil
    Haskell.CabalSpec
    Haskell.StackSpec
    Maven.DepTreeSpec
    Maven.PluginSpec
    Maven.PluginStrategySpec
    Maven.PluginTreeSpec
    Maven.PomStrategySpec
    Nim.NimbleSpec
    Node.NodeSpec
    Node.PackageJsonSpec
    Node.PackageLockSpec
    Node.PackageLockV3Spec
    NuGet.NuspecSpec
    NuGet.PackageReferenceSpec
    NuGet.PackagesConfigSpec
    NuGet.PaketSpec
    NuGet.ProjectAssetsJsonSpec
    NuGet.ProjectJsonSpec
    Perl.PerlSpec
    Pnpm.PnpmLockSpec
    Python.PipenvSpec
    Python.Poetry.CommonSpec
    Python.Poetry.PoetryLockSpec
    Python.Poetry.PyProjectSpec
    Python.PoetrySpec
    Python.ReqTxtSpec
    Python.RequirementsSpec
    Python.SetupPySpec
    ResultUtil
    RPM.SpecFileSpec
    Ruby.BundleShowSpec
    Ruby.GemfileLockSpec
    Ruby.ParseSpec
    Scala.CommonSpec
    Scala.SbtDependencyTreeParsingSpec
    Scala.SbtDependencyTreeSpec
    Swift.PackageResolvedSpec
    Swift.PackageSwiftSpec
    Swift.Xcode.PbxprojParserSpec
    Swift.Xcode.PbxprojSpec
    System.ArgsSpec
    Test.Effect
    Test.Fixtures
    Test.MockApi
    Yarn.V1.YarnLockV1Spec
    Yarn.V2.LockfileSpec
    Yarn.V2.ResolversSpec

  build-tool-depends: hspec-discover:hspec-discover ^>=2.8.2
  build-depends:
    , hedgehog                        ^>=1.0.2
    , hspec                           ^>=2.8.2
    , hspec-core                      ^>=2.8.2
    , hspec-expectations-pretty-diff  ^>=0.7.2.5
    , hspec-hedgehog                  ^>=0.0.1.2
    , hspec-megaparsec                ^>=2.2
    , HUnit                           ^>=1.6.0
    , spectrometer

test-suite integration-tests
  import:             lang
  import:             deps
  type:               exitcode-stdio-1.0
  hs-source-dirs:     integration-test
  main-is:            test.hs
  ghc-options:        -threaded
  other-modules:
    Analysis.CarthageSpec
    Analysis.ClojureSpec
    Analysis.CocoapodsSpec
    Analysis.ElixirSpec
    Analysis.ErlangSpec
    Analysis.FixtureExpectationUtils
    Analysis.FixtureUtils
    Analysis.GoSpec
    Analysis.GradleSpec
    Analysis.LicenseScannerSpec
    Analysis.MavenSpec
    Analysis.NugetSpec
    Analysis.PnpmSpec
    Analysis.Python.PipenvSpec
    Analysis.Python.PoetrySpec
    Analysis.Python.SetuptoolsSpec
    Analysis.RubySpec
    Analysis.RustSpec
    Analysis.ScalaSpec

  build-tool-depends: hspec-discover:hspec-discover ^>=2.8.2
  build-depends:
    , hedgehog                        ^>=1.0.2
    , hspec                           ^>=2.8.2
    , hspec-core                      ^>=2.8.2
    , hspec-expectations-pretty-diff  ^>=0.7.2.5
    , hspec-hedgehog                  ^>=0.0.1.2
    , hspec-megaparsec                ^>=2.2
    , req-conduit                     ^>=1.0.1
    , spectrometer

benchmark bench
  import:         lang
  import:         deps
  hs-source-dirs: bench/
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  build-depends:
    , spectrometer
    , tasty-bench

  ghc-options:    -with-rtsopts=-A32m
